--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "postinstall": "prisma generate",
     "db:push": "prisma db push",
     "db:seed": "tsx prisma/seed.ts",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "db:migrate": "tsx scripts/migrate-database.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
@@ -31,12 +32,14 @@
     "mongodb": "^6.20.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "papaparse": "^5.5.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "recharts": "^3.2.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
